spade-tests/src/snapshots/spade_tests__hir_lowering__tests__unknown_optimization_pass_is_an_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
#[optimize(banana)]
entity a() {}


error: There is no optimization pass named banana
  ┌─ testinput:1:12
  │
1 │ #[optimize(banana)]
  │            ^^^^^^ No such pass


